+ Added $config_application_dir which can be used to separate ATK from your
  application code. [Boy]
+ Added atkManyToManySelectRelation, a new variant of the many to many relation
  which allows you to add items to the relation using auto-completion. Useful 
  for many-to-many relations which have many selectable options. [Peter]
* Refactored and fixed searching in attributes and relations. Custom attributes/
  relations which override the search method and take prefixes into account
  might break because the way the atkSearch(Mode) array is now handled.
  [Tjeerd, Peter]
* Fixed initial value of obligatory atkDate(Time)Attribute. [Tjeerd, Peter]
* Fix re-aliassen with multiple sortfields in atkManyToOneRelation. [Martijn]
* Fixed issue with adding o2m relation with a set filter. [Peter/Tjeerd]
* Fixed issue with ordering in recordlist when multiple ordercolumns were
  specified. [Tjeerd]
* Fixed a possible error situation in Smarty, which caused fatal errors on some
  occasions. This was caused by a &nbsp; directly after an open tag, added there
  for example by the FCK Editor. [Peter,Tjeerd]
* In atkCountryAttribute i changed the world_countries_shortlist.
  Germany was missing and the UK was listed twice, and canada is added now.
  [Erik]
* Added html entities to the country definitions in atkCountryAttribute and
  html_decode them before putting them in the array so that it should contain
  the right character. [Erik]
* A test will now fail if a specified class cannot be found. [Peter]
* Refactored atkDateAttribute a bit, so we don't need the include.php file to
  register it's javascript. This makes the use of class.atkdateattribute.js.inc
  deprecated. Also added a call to the onChange handler for the input field if
  the AF_DATE_STRING flag is used. [Tjeerd,Peter]
* atkDebugger now only stores query traces if debuglevel > 2. [Tjeerd]
* Fixed non static call to atkFileUtils. [Yannick]
* Atkaggregatedcolumn use method label() for label generation. [Yury]